# Database

./: README.md
lab/: 关于实验5与实验8.ppt
lab/1/: SQL11.md  《数据库系统》实验报告1.1.docx  《数据库系统》实验报告1.2.docx  《数据库系统》实验报告1.3.docx  《数据库系统》实验报告1.4.docx  《数据库系统》实验报告1.5.docx  《数据库系统》实验报告1.6.docx
lab/2/: 《数据库系统》实验报告2.1.docx
lab/3/: 《数据库系统》实验报告3.1.docx  《数据库系统》实验报告3.2.docx  《数据库系统》实验报告3.3.docx
lab/4/: 《数据库系统》实验报告4.docx
lab/5/: minitcph.sql  minitcph_concept.ndmc2  minitcph_logic.ndml2  minitcph_physics.ndm2  《数据库系统》实验报告5.docx
lab/6/: 《数据库系统》实验报告6.1.docx  《数据库系统》实验报告6.2.docx
lab/7/20337251(伍建霖) 数据库实验7/71/: T71B.cpp
lab/7/20337251(伍建霖) 数据库实验7/72/: T72C.java  T72More1.java
lab/7/71/: T71A.cpp  T71C.cpp  T71More1.cpp  《数据库系统》实验报告7.1.docx
lab/7/72/: T72A.java  T72B.java  《数据库系统》实验报告7.2.docx
lab/8/: exp.sql  《数据库系统》实验报告8.docx  《数据库系统》实验报告8_文档内容样例.doc
lab/8/20337251(伍建霖) 数据库实验8/: connect.py  role.sql
theory/1/: 20337251(伍建霖)数据库系统作业1.docx  Homework 01.ppt
theory/2/: 20337251(伍建霖)数据库系统作业2.docx  Homework 02.ppt
theory/3/: 20337251(伍建霖)数据库系统作业3.docx  Homework 03.ppt  数据库理论homework3.md
theory/4/: 20337251(伍建霖)数据库系统作业4.docx  Homework 04.ppt
theory/5/: 20337251(伍建霖)数据库系统作业5.doc
theory/6/: 20337251(伍建霖)数据库系统作业6.doc  Homework 06.ppt
theory/7/: 20337251(伍建霖)数据库系统作业7.doc  Homework 07.ppt  ans.md
theory/answer/: .gitignore
theory/answer/4chapter中级SQL/: 4chapter.sql
theory/answer/5chapter高级SQL/: 5chapter习题.org
theory/answer/5chapter高级SQL/pqxx/: CMakeLists.txt  compile_commands.json  usepqxx.cxx  xxx.cxx
theory/answer/5chapter高级SQL/qtsql/: CMakeLists.txt  compile_commands.json  danteng.cpp
theory/answer/6chapter形式化关系查询语言/: 6chapterExercises.tex  6chapterNote.tex  tmp.tex
theory/answer/8chapter关系数据库设计/: 8chapterNotes.tex  dingjia.cls
